# computer_vision_py

./: .gitignore  README.md  pyproject.toml
app/: social_distance_detector.py  vision_lib.py
